crates/sniff-test/tests/snapshots/cli__ambiguous_marker_diagnostics.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking ambiguous-markers v0.1.0 ([FIXTURE])
warning: [sniff-test::panics::documented-panic] this call's documented panic conditions are not accounted for
  --> src/lib.rs:11:21
   |
11 |         let first = ratio(a, denominator);
   |                     ^^^^^^^^^^^^^^^^^^^^^ `ratio` documents when this call may panic
   |
   = help: address the documented panic conditions at each affected call with `// PANIC:`
   = help: for the full explanation, run `'[SNIFF-TEST]' explain 5vp2 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

warning: [sniff-test::panics::documented-panic] this call's documented panic conditions are not accounted for
  --> src/lib.rs:12:22
   |
12 |         let second = ratio(b, denominator);
   |                      ^^^^^^^^^^^^^^^^^^^^^ `ratio` documents when this call may panic
   |
   = help: address the documented panic conditions at each affected call with `// PANIC:`
   = help: for the full explanation, run `'[SNIFF-TEST]' explain 5vp2 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: [sniff-test::analysis::ambiguous-panic-requirement] multiple `# Panics` requirements use the name `nonzero`
  --> src/lib.rs:21:1
   |
21 | /// - nonzero: denominator must not be zero.
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this requirement name is not unique
   |
   = help: give each documented requirement a unique name
   = help: for the full explanation, run `'[SNIFF-TEST]' explain zq34 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: [sniff-test::analysis::ambiguous-panic-marker] `// PANIC:` comment could apply to multiple panic paths
  --> src/lib.rs:47:1
   |
47 | /         // PANIC: this fixture guards both operations.
48 | |         call_documented_and_sink!()
   | |_^ this comment matches 2 possible panic paths
   |
   = help: place a separate `// PANIC:` marker on each panic path
   = help: for the full explanation, run `'[SNIFF-TEST]' explain n2jf --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

warning: [sniff-test::panics::documented-panic] this call's documented panic conditions are not accounted for
  --> src/lib.rs:67:5
   |
67 |     first_documented_source();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ `first_documented_source` documents when this call may panic
   |
help: address the documented panic conditions at each affected call with `// PANIC:`
  --> src/lib.rs:77:5
   |
77 |     shared_documented_sources();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for the full explanation, run `'[SNIFF-TEST]' explain ckp6 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

warning: [sniff-test::panics::documented-panic] this call's documented panic conditions are not accounted for
  --> src/lib.rs:68:5
   |
68 |     second_documented_source();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ `second_documented_source` documents when this call may panic
   |
help: address the documented panic conditions at each affected call with `// PANIC:`
  --> src/lib.rs:77:5
   |
77 |     shared_documented_sources();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for the full explanation, run `'[SNIFF-TEST]' explain ckp6 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: [sniff-test::analysis::ambiguous-panic-marker] `// PANIC:` comment could apply to multiple panic paths
  --> src/lib.rs:72:1
   |
72 | /     // PANIC: this path accepts both documented effects.
73 | |     shared_documented_sources();
   | |_^ this comment matches 2 possible panic paths
   |
   = help: place a separate `// PANIC:` marker on each panic path
   = help: for the full explanation, run `'[SNIFF-TEST]' explain af6v --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `ambiguous-markers` (lib) generated 4 warnings
error: could not compile `ambiguous-markers` (lib) due to 3 previous errors; 4 warnings emitted
