crates/sniff-test/tests/snapshots/cli__ambiguous_safety_diagnostics.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking ambiguous-safety v0.1.0 ([FIXTURE])
error: [sniff-test::analysis::ambiguous-safety-requirement] multiple `# Safety` requirements use the name `valid ptr`
 --> src/lib.rs:7:1
  |
7 | /// - valid_ptr: pointer must be non-null.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this requirement name is not unique
  |
  = help: give each documented requirement a unique name
  = help: for the full explanation, run `'[SNIFF-TEST]' explain vkav --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
error: could not compile `ambiguous-safety` (lib) due to 1 previous error
