crates/sniff-test/tests/snapshots/cli__ambiguous_safety_macro_shared_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking ambiguous-safety v0.1.0 ([FIXTURE])
error: [sniff-test::analysis::ambiguous-safety-marker] `// SAFETY:` comment could apply to multiple safety obligations
  --> src/lib.rs:37:1
   |
37 | /         // SAFETY: this fixture's operations have no additional requirements.
38 | |         perform_twice_without_marker!()
   | |_^ this comment matches 2 possible safety obligations
   |
   = help: give each safety obligation its own `// SAFETY:` marker
   = help: for the full explanation, run `'[SNIFF-TEST]' explain wfk8 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: [sniff-test::analysis::ambiguous-safety-marker] `// SAFETY:` comment could apply to multiple safety obligations
  --> src/lib.rs:75:1
   |
75 | /         // SAFETY:
76 | |         // - initialized: this fixture initializes the shared state.
77 | |         call_safe_obligation_twice!()
   | |_^ this comment matches 2 possible safety obligations
   |
   = help: give each safety obligation its own `// SAFETY:` marker
   = help: for the full explanation, run `'[SNIFF-TEST]' explain ycw6 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: [sniff-test::analysis::ambiguous-safety-marker] `// SAFETY:` comment could apply to multiple safety obligations
  --> src/lib.rs:87:1
   |
87 | /     // SAFETY:
88 | |     // - initialized: this fixture initializes the shared state.
89 | |     unsafe {
   | |_^ this comment matches 2 possible safety obligations
   |
   = help: give each safety obligation its own `// SAFETY:` marker
   = help: for the full explanation, run `'[SNIFF-TEST]' explain ch58 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: could not compile `ambiguous-safety` (lib) due to 3 previous errors
