crates/sniff-test/tests/snapshots/cli__cached_raw_pointer_override_applies.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking dependency-safety v0.1.0 ([FIXTURE]/dep)
    Checking dependency-safety-app v0.1.0 ([FIXTURE]/app)
    Finished `release` profile [optimized] target(s) in [TIME]
