crates/sniff-test/tests/snapshots/cli__cargo_manifest_path_forwarding.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
sniff-test: no sniff-test.toml found between [TEMP] and [FIXTURE]; using built-in defaults (public functions plus executable entry point as report roots, panic and safety findings warned)
    Checking panic-axioms v0.1.0 ([FIXTURE])
warning: [8edbbf5d] function `division` may have panic effect
 --> src/lib.rs:1:1
  |
1 | pub fn division(total_size: usize, block_count: usize) -> usize {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
2 |     total_size / block_count
  |     ------------------------ this may have panic effect
  |
note: `division` reaches panic effect operation here
 --> src/lib.rs:2:5
  |
2 |     total_size / block_count
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  = help: if this operation cannot have panic effect, explain why with a `// PANIC:` comment
  = help: if `division` can have panic effect, add a `# Panics` section

warning: [5c13c1d0] function `indexed` may have panic effect
  --> src/lib.rs:9:1
   |
 9 | pub fn indexed(values: &[usize], index: usize) -> usize {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
10 |     values[index]
   |     ------------- this may have panic effect
   |
note: `indexed` reaches panic effect operation here
  --> src/lib.rs:10:5
   |
10 |     values[index]
   |     ^^^^^^^^^^^^^
   = help: if this operation cannot have panic effect, explain why with a `// PANIC:` comment
   = help: if `indexed` can have panic effect, add a `# Panics` section

warning: [d8384e8e] function `remainder` may have panic effect
 --> src/lib.rs:5:1
  |
5 | pub fn remainder(total_size: usize, block_size: usize) -> usize {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
6 |     total_size % block_size
  |     ----------------------- this may have panic effect
  |
note: `remainder` reaches panic effect operation here
 --> src/lib.rs:6:5
  |
6 |     total_size % block_size
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  = help: if this operation cannot have panic effect, explain why with a `// PANIC:` comment
  = help: if `remainder` can have panic effect, add a `# Panics` section

note: run `cargo sniff-test --explain <trace-id>` to see more details
note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `panic-axioms` (lib) generated 3 warnings
    Finished `release` profile [optimized] target(s) in [TIME]
