crates/sniff-test/tests/snapshots/cli__clean_explicit_report_roots_do_not_warn.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking ambiguous-markers v0.1.0 ([FIXTURE])
    Finished `release` profile [optimized] target(s) in [TIME]
