crates/sniff-test/tests/snapshots/cli__compact_stack_hint.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking safe-markers v0.1.0 ([FIXTURE])
error: [fe797569] function `unsafe_call` may have panic effect
  --> src/lib.rs:16:1
   |
16 | pub fn unsafe_call(flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
17 |     helper(flag);
   |     ------------ this may have panic effect
   |
note: `unsafe_call` reaches `panic` here
  --> src/lib.rs:21:5
   |
21 |     assert!(flag);
   |     ^^^^^^^^^^^^^
   = help: if this call cannot have panic effect, explain why with a `// PANIC:` comment
   = help: if `unsafe_call` can have panic effect, add a `# Panics` section

error: [9451dc4d] function `unsafe_ratio` may have panic effect
 --> src/lib.rs:7:1
  |
7 | pub fn unsafe_ratio(total: usize, denominator: usize) -> usize {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
8 |     total / denominator
  |     ------------------- this may have panic effect
  |
note: `unsafe_ratio` reaches panic effect operation here
 --> src/lib.rs:8:5
  |
8 |     total / denominator
  |     ^^^^^^^^^^^^^^^^^^^
  = help: if this operation cannot have panic effect, explain why with a `// PANIC:` comment
  = help: if `unsafe_ratio` can have panic effect, add a `# Panics` section

note: run `cargo sniff-test --explain <trace-id>` to see more details
note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
error: could not compile `safe-markers` (lib) due to 2 previous errors
