crates/sniff-test/tests/snapshots/cli__compiler_assert_division_override_uses_umbrella_fallback.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking panic-axioms v0.1.0 ([FIXTURE])
error: [sniff-test::panics::compiler-assert-division-by-zero] this division may panic
 --> src/lib.rs:2:5
  |
2 |     total_size / block_count
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ the divisor may be zero
  |
  = help: document when this panic can occur under `# Panics`, or add `// PANIC:` if an invariant rules it out
  = help: for the full explanation, run `'[SNIFF-TEST]' explain sk03 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: could not compile `panic-axioms` (lib) due to 1 previous error
